--- a/frontend/src/components/base/Button/Button.scss
+++ b/frontend/src/components/base/Button/Button.scss
@@ -7,7 +7,7 @@
   background-color: #423630;
   border-radius: 3px;
   border: 0;
-  padding: 0.6rem 0;
+  padding: 0.6rem 0.8rem;
   display: flex;
   align-items: center;
   justify-content: center;
