--- a/frontend/src/components/organism/More/MoreList/MoreList.scss
+++ b/frontend/src/components/organism/More/MoreList/MoreList.scss
@@ -15,10 +15,11 @@
   cursor: pointer;
   display: flex;
   align-items: center;
-  padding: 1rem 1rem;
+  padding: 1.3rem 1.3rem;
+  font-size: 0.9rem;
 
   &:hover {
-    background-color: #ececed;
+    background-color: #f2f2f2;
   }
   
   & > * + * {
@@ -27,7 +28,7 @@
   }
 
   &__icon {
-    font-size: 20px;
+    font-size: 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
