--- a/frontend/src/components/common/UserCard/UserCard.scss
+++ b/frontend/src/components/common/UserCard/UserCard.scss
@@ -49,7 +49,13 @@
   }
 
   &__additional {
+    cursor: pointer;
     flex: 1;
-    word-break:break-all;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding-right: 1rem;
+    color: #a6a6a6;
+    word-break: break-all;
   }
 }
