ADD signfrom modal

--- a/frontend/src/components/organism/Friend/FriendList/FriendList.scss
+++ b/frontend/src/components/organism/Friend/FriendList/FriendList.scss
@@ -34,4 +34,12 @@
       color: #cccccc;
     }
   }
+
+  &__item-option.remove {
+    transition: 0.2s color ease-in-out;
+    
+    &:hover {
+      color: tomato;
+    }
+  }
 }
