--- a/frontend/src/components/organism/Sign/SignUpModal/SignUpModal.scss
+++ b/frontend/src/components/organism/Sign/SignUpModal/SignUpModal.scss
@@ -33,6 +33,10 @@
     color: rgba(0, 0, 0, 0.6);
   }
 
+  &__content {
+    margin: 1rem 1rem 0;
+  }
+
   &__column {
     margin-bottom: 1.4rem;
   }
