ADD chat room item

--- a/frontend/src/components/base/AvatarList/AvatarList.scss
+++ b/frontend/src/components/base/AvatarList/AvatarList.scss
@@ -1,14 +1,29 @@
 
 .avatar-list {
-  width: 2.8rem;
-  height: 2.8rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 2.75rem;
+  height: 2.75rem;
   overflow: hidden;
 
+  &__single {
+    & > * {
+      margin: 0 auto;
+    }
+  }
+
   &__duo {
+    width: 100%;
     height: 100%;
     position: relative;
 
     & > * {
+      &:nth-child(1) {
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
       &:nth-child(2) {
         position: absolute;
         top: 35%;
