--- a/frontend/src/style/color.scss
+++ b/frontend/src/style/color.scss
@@ -8,3 +8,8 @@ $red-light: #ff5442;
 $main-color: #93e7fb;
 $main-color-light: #c0f6fb;
 $main-color-row: #e0ffff;
+
+$snow-high-bold: #6275a3;
+$snow-bold: #677bac;
+// $snow-blue: #C9D6F6;
+// $snow-blue: #4F6FD2;
