ADD member speech bubble

--- a/frontend/src/components/organism/ChatRoom/ChatRoomMain/ChatRoomMain.scss
+++ b/frontend/src/components/organism/ChatRoom/ChatRoomMain/ChatRoomMain.scss
@@ -10,5 +10,15 @@
   &__messages {
     flex: 1;
     background-color: $snow-bold;
+    overflow-y: auto;
+
+    &::-webkit-scrollbar {
+      width: 0.3rem;
+    }
+    &::-webkit-scrollbar-thumb {
+      cursor: pointer;
+      background: #8595bd;
+      border-radius: 26px;
+    }
   }
 }
