--- a/frontend/src/style/color.scss
+++ b/frontend/src/style/color.scss
@@ -9,7 +9,8 @@ $main-color: #93e7fb;
 $main-color-light: #c0f6fb;
 $main-color-row: #e0ffff;
 
+$snow-top-bold: #556791;
 $snow-high-bold: #6275a3;
 $snow-bold: #677bac;
-// $snow-blue: #C9D6F6;
+$snow-blue: #d8e9f3;
 // $snow-blue: #4F6FD2;
