--- a/frontend/src/components/base/DropdownMenu/DropdownMenu.scss
+++ b/frontend/src/components/base/DropdownMenu/DropdownMenu.scss
@@ -1,5 +1,6 @@
 
 .dropdown-menu {
+  outline: none;
   display: flex;
   flex-direction: column;
 
@@ -10,7 +11,7 @@
 
 .hidden-menu {
   background-color: #fff;
-  border: 1px solid #282828;
+  border: 1px solid #4d4d4d;
   min-width: 8.5rem;
   position: absolute;
   top: 0.3rem;
