ADD chat room btn event
redirect hooks 추가

--- a/frontend/src/components/common/UserCard/UserCard.scss
+++ b/frontend/src/components/common/UserCard/UserCard.scss
@@ -52,8 +52,9 @@
   }
 
   &__desc {
+    max-width: 10rem;
     margin-top: 0.5rem;
-    overflow-y: hidden;
+    overflow: hidden;
     white-space: nowrap; 
     text-overflow: ellipsis;
     color: #666666;
