--- a/frontend/src/components/base/Button/Button.scss
+++ b/frontend/src/components/base/Button/Button.scss
@@ -20,5 +20,5 @@
 }
 
 .basic-btn-lock {
-  cursor: url('/src/assets/image/block.png'), auto;
+  cursor: url('../../../assets/image/block.png'), auto;
 }
