--- a/frontend/src/components/organism/ChatRoom/ChatRoomInput/ChatRoomInput.scss
+++ b/frontend/src/components/organism/ChatRoom/ChatRoomInput/ChatRoomInput.scss
@@ -23,6 +23,10 @@
     & + & {
       margin-left: 0.7rem;
     }
+
+    & > * {
+      cursor: pointer;
+    }
   }
 
   &__messageArea {
@@ -49,4 +53,9 @@
     color: #cccccc;
     background-color: $snow-bold;
   }
+}
+
+#inputImg {
+  width: 0px;
+  height: 0px;
 }
