--- a/frontend/src/components/base/WithModal/Modal/Modal.scss
+++ b/frontend/src/components/base/WithModal/Modal/Modal.scss
@@ -7,7 +7,7 @@
   position: fixed;
   left: 0;
   top: 0;
-  margin: 0;
+  margin: 0 !important;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
@@ -23,5 +23,9 @@
     display: flex;
     justify-content: flex-end;
     color: #b3b3b3;
+
+    & > * {
+      cursor: pointer;
+    }
   }
 }
