FIX front logic

--- a/frontend/src/style/color.scss
+++ b/frontend/src/style/color.scss
@@ -5,7 +5,7 @@ $base-gray: #737373;
 $main-font-color: #262626;
 $red-light: #ff5442;
 
-$main-color: #93e7fb;
+$main-color: #7da0ce;
 $main-color-light: #c0f6fb;
 $main-color-row: #e0ffff;
 
