--- a/frontend/src/components/organism/Sign/SignSection/SignSection.scss
+++ b/frontend/src/components/organism/Sign/SignSection/SignSection.scss
@@ -10,8 +10,10 @@
   background-color: $main-color;
 
   &__body {
+    user-select: none;
+
     & > * + * {
-      margin-top: 1rem;
+      margin-top: 2rem;
     }
   }
 
@@ -30,7 +32,7 @@
     justify-content: center;
 
     & > img {
-      width: 8rem;
+      width: 9.5rem;
     }
   }
 
